nav overlap fix attempt 2

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ nav ul li a:hover {
     color: #FFFFFF;
 }
 body {
-    padding-left:10%;
+    margin-left:10%;
     margin: 0;
     background-color: #36393E;
 }
